@startuml

abstract class Port
{
    + virtual ~Port() = default

    + template<typename T> T* ConvertToWrite() const
     * @brief : Convert the port to a specific writeable system port type
     * @param T : The type of system write port to convert to
     * @return T* : A pointer to the converted writeable system port, or nullptr if the conversion fails

    + template<typename T> const T* ConvertToRead() const
     * @brief : Convert the port to a specific readable system port type
     * @param T : The type of system read port to convert to
     * @return const T* : A pointer to the converted readable system port, or nullptr if the conversion fails
    ---
}

class UserWritePort
{
    + UserWritePort() = default
    + ~UserWritePort() override = default
    ---
}
UserWritePort --|> Port
note top of UserWritePort
    Although TECS does not include this, 
    users will need to implement it themselves when using the system.
end note

class UserReadPort
{
    + UserReadPort() = default
    + ~UserReadPort() override = default
    ---
}
UserReadPort --|> Port
note top of UserReadPort
    Although TECS does not include this, 
    users will need to implement it themselves when using the system.
end note

class TaskInfo
{
    + TaskInfo(std::string name, uint32_t tag)
     *  @brief : Construct a new TaskInfo object with the specified name and tag
     *  @param name : The name of the task
     *  @param tag : A unique identifier for the task

    + TaskInfo() = default
    + ~TaskInfo() = default

    + std::string_view GetName() const
     * @brief : Get the name of the task
     * @return std::string_view : The name of the task

    + uint32_t GetTag() const
     * @brief : Get the unique identifier of the task
     * @return uint32_t : The unique identifier of the task
    ---
    - std::string name_
     * The name of the task

    - uint32_t tag_
     * A unique identifier for the task
}

class TaskResult
{
    + TaskResult(bool success, std::string message = "")
     * @brief : Construct a new TaskResult object with the specified success status and message
     * @param success : A boolean indicating whether the task was successful
     * @param message : A message providing additional information about the task result

    + ~TaskResult() = default

    + bool operator()() const
     * @brief : Get the success status of the task result
     * @return bool : True if the task was successful, false otherwise

    + std::string_view GetMessage() const
     * @brief : Get the message associated with the task result
     * @return std::string_view : The message associated with the task result
    ---
    - bool success_
     * A boolean indicating whether the task was successful

    - std::string message_
     * A message providing additional information about the task result
}

abstract class Task
{
    + Task(TaskInfo info)
     * @brief : Construct a new Task object with the specified task information
     * @param info : The information about the task

    + virtual ~Task() = default

    + TaskInfo GetInfo() const
     * @brief : Get the information about the task
     * @return TaskInfo : The information about the task

    + virtual TaskResult Execute(Port& write_port, Port& read_port) = 0
     * @brief : Execute the task using the provided write and read ports
     * @param write_port : The write port to use writeable adapters
     * @param read_port : The read port to use readable adapters
     * @return TaskResult : The result of executing the task
    ---
    - TaskInfo info_
     * The information about the task
}
Task ..> Port
Task ..> TaskResult
Task *-- TaskInfo

class UserTask
{
    + UserTask(TaskInfo info)
     * @brief : Construct a new UserTask object with the specified task information
     * @param info : The information about the task

    + ~UserTask() override = default
    ---
}
UserTask --|> Task
note top of UserTask
    Although TECS does not include this, 
    users will need to implement it themselves when using the system.
end note

class TaskCallerInfo
{
    + TaskCallerInfo(std::string file, int line, std::string function)
     * @brief : Construct a new TaskCallerInfo object with the specified caller information
     * @param file : The file name of the caller
     * @param line : The line number of the caller
     * @param function : The function name of the caller

    + ~TaskCallerInfo() = default

    + std::string_view GetFile() const
     * @brief : Get the file name of the caller
     * @return std::string_view : The file name of the caller

    + int GetLine() const
     * @brief : Get the line number of the caller
     * @return int : The line number of the caller

    + std::string_view GetFunction() const
     * @brief : Get the function name of the caller
     * @return std::string_view : The function name of the caller
    ---
    - std::string file_
     * The file name of the caller

    - int line_
     * The line number of the caller

    - std::string function_
     * The function name of the caller
}

class TaskSet
{
    TaskSet(std::unique_ptr<Task> task, TaskCallerInfo caller_info)
     * @brief : Construct a new TaskSet object with the specified task and caller information
     * @param task : A unique pointer to the task to be executed
     * @param caller_info : The information about the caller of the task

    ~TaskSet() = default
    ---
    + std::unique_ptr<Task> task
     * The task to be executed

    + TaskCallerInfo caller_info
     * The information about the caller of the task
}
TaskSet *-- Task
TaskSet *-- TaskCallerInfo

class TaskList
{
    + TaskList() = default
    + ~TaskList() = default

    + void AddTask(std::unique_ptr<Task> task, TaskCallerInfo caller_info)
     * @brief : Add a task to the task list with the caller information
     * @param task : A unique pointer to the task to add
     * @param caller_info : The information about the caller of the task

    + std::vector<TaskSet> GetTasks() const
     * @brief : Get the list of tasks in the task list
     * @return std::vector<TaskSet> : A vector of TaskSet
    ---
    - std::vector<TaskSet> tasks_
     * A vector of TaskSet, where each TaskSet consists of a task and the caller information
}
TaskList *-- TaskSet

class TaskListQueue
{
    + TaskListQueue() = default
    + ~TaskListQueue() = default

    + void Enqueue(TaskList task_list)
     * @brief : Add a task list to the queue
     * @param task_list : The task list to add to the queue

    + TaskList Dequeue()
     * @brief : Remove and return the next task list from the queue
     * @return TaskList : The next task list from the queue
    ---
    - std::queue<TaskList> queue_
     * A queue of task lists
}
TaskListQueue *-- TaskList

class TaskProcessor
{
    + TaskProcessor() = default
    + ~TaskProcessor() = default

    + bool FlushTasks(TaskListQueue& task_queue, Port& write_port, Port& read_port)
     * @brief : Process the tasks in the task queue using the provided write and read ports
     * @param task_queue : The task queue to process tasks from
     * @param write_port : The write port to use writeable adapters
     * @param read_port : The read port to use readable adapters
    
    + TaskInfo GetCurrentTaskInfo() const
     * @brief : Get the information about the currently executing task
     * @return TaskInfo : The information about the currently executing task
    ---
    - mutable std::mutex mutex_
     * A mutex to protect access to the current task information

    - TaskInfo current_task_info_
     * The information about the currently executing task
}
TaskProcessor ..> Port

class System
{
    + System(std::string name)
     * @brief : Construct a new System object with the specified name

    + virtual ~System() = default

    # bool Initialize(std::unique_ptr<Port> write_port, std::unique_ptr<Port> read_port)
     * @brief : Initialize the system with the provided write and read ports
     * @param write_port : A unique pointer to the write port to use writeable adapters
     * @param read_port : A unique pointer to the read port to use readable adapters
     * @return bool : True if the system was successfully initialized, false otherwise

    + std::string_view GetName() const
     * @brief : Get the name of the system
     * @return std::string_view : The name of the system

    + void SubmitTaskList(TaskList task_list)
     * @brief : Submit a task list to the system for processing
     * @param task_list : The task list to submit to the system

    + const Port& GetReadPort() const
     * @brief : Get a reference to the read port for the system
     * @return const Port& : A reference to the read port for the system

    + bool FlushTasks()
     * @brief : Flush the tasks in the system's task queue using the task processor
     * @return bool : True if the tasks were successfully flushed, false otherwise

    + TaskInfo GetCurrentTaskInfo() const
     * @brief : Get the information about the currently executing task in the system
     * @return TaskInfo : The information about the currently executing task in the system
    ---
    {static} - uint32_t next_id_
     * A static variable to generate unique identifiers for systems

    - std::string name_
     * The name of the system

    - TaskProcessor task_processor_
     * The task processor for the system

    - TaskListQueue task_queue_
     * The task list queue for the system

    - std::unique_ptr<Port> write_port_
     * A unique pointer to the write port for the system

    - std::unique_ptr<Port> read_port_
     * A unique pointer to the read port for the system

    {static} # uint32_t next_id_
     * A static variable to generate unique identifiers for systems
}
System *-- TaskProcessor
System *-- TaskListQueue
System *-- Port

class SystemBase
{
    + SystemBase(std::string name)
     * @brief : Construct a new SystemBase object with the specified name
     * @param name : The name of the system

    + virtual SystemBase() = default

    {static} + uint32_t GetID()
     * @brief : Get the unique identifier of the system
     * @return uint32_t : The unique identifier of the system
    ---
}
SystemBase --|> System

class UserSystem
{
    + UserSystem()
     * @brief : Construct a new UserSystem object, which is a user-defined implementation of a system
     * It needs to implement the Initialize method to set up the write and read ports

    + ~UserSystem() override = default
    ---
}
UserSystem --|> SystemBase
note top of UserSystem
    Although TECS does not include this, 
    users will need to implement it themselves when using the system.
end note

class SystemView
{
    + SystemView(System& system)
     * @brief : Construct a new SystemView object for the specified system
     * @param system : The system to create a view for

    + ~SystemView() = default

    + std::string_view GetSystemName() const
     * @brief : Get the name of the system that this view represents
     * @return std::string_view : The name of the system

    + void SubmitTaskList(TaskList task_list)
     * @brief : Submit a task list to the system view for processing
     * @param task_list : The task list to submit to the system view

    + const Port& GetReadPort() const
     * @brief : Get a reference to the read port for the system view
     * @return const Port& : A reference to the read port for the system view

    + TaskInfo GetCurrentTaskInfo() const
     * @brief : Get the information about the currently executing task in the system view
     * @return TaskInfo : The information about the currently executing task in the system view

    + std::unique_ptr<SystemView> Clone() const
     * @brief : Create a new instance of the system view that is a copy of the current instance
     * @return std::unique_ptr<SystemView> : A unique pointer to the cloned system view
    ---
    - System& system_
     * A reference to the system that this view represents

}
SystemView ..> System

class SystemViewRegistry
{
    + SystemViewRegistry() = default
    + ~SystemViewRegistry() = default

    + void RegisterView(uint32_t system_id, std::unique_ptr<SystemView> view)
     * @brief : Register a system view with the registry for a specific system ID
     * @param system_id : The unique identifier of the system to register the view for
     * @param view : A unique pointer to the system view to register

    + std::unique_ptr<SystemView> GetView(uint32_t system_id) const
     * @brief : Get the system view registered for a specific system ID from the registry
     * @param system_id : The unique identifier of the system to get the view for
     * @return std::unique_ptr<SystemView> : A unique pointer to the system view registered for the specified system ID
    ---
    - std::unordered_map<uint32_t, std::unique_ptr<SystemView>> views_
     * A map of system IDs to their corresponding registered system views
}
SystemViewRegistry *-- SystemView

@enduml